WIP copying old game engine

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,43 @@
     <artifactId>GameEngine</artifactId>
     <version>0.0.1-preview</version>
 
+    <packaging>jar</packaging>
+    <name>Game engine for the challenge week software engineering at university of applied science in Leiden</name>
+    <description>This is a game engine for education purposes.</description>
+    <url>https://github.com/Hogeschool-Leiden/GameEngine.git</url>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <properties>
+        <jdk.version>1.8</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
