--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>Hogeschool-Leiden</name>
-            <url>https://maven.pkg.github.com/Hogeschool-Leiden/nl.hsleiden:GameEngine</url>
+            <name>GameEngine</name>
+            <url>https://maven.pkg.github.com/Hogeschool-Leiden/GameEngine</url>
         </repository>
     </distributionManagement>
 
