--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
         </license>
     </licenses>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Hogeschool-Leiden</name>
+            <url>https://maven.pkg.github.com/Hogeschool-Leiden/GameEngine</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
